@@ -1,46 +1,72 @@
 package com.healthcare.bean.security;
 
-import com.healthcare.bean.security.JwtUtil;
 import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
+@RequiredArgsConstructor
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
-    @Autowired
-    private JwtUtil jwtUtil;
+    private final JwtUtil jwtUtil;
+
+    private static final List<String> PUBLIC_URLS = List.of(
+            "/api/users/signup",
+            "/api/users/login",
+            "/api/users/request-otp",
+            "/api/users/verify-otp",
+            "/api/therapist/signup",
+            "/api/therapist/login",
+            "/api/admin/auth",
+            "/swagger-ui",
+            "/v3/api-docs",
+            "/actuator"
+    );
+
+    @Override
+    protected boolean shouldNotFilter(HttpServletRequest request) {
+        String path = request.getRequestURI();
+        return PUBLIC_URLS.stream().anyMatch(path::startsWith);
+    }
 
     @Override
     protected void doFilterInternal(
             HttpServletRequest request,
             HttpServletResponse response,
-            FilterChain filterChain) throws IOException, jakarta.servlet.ServletException {
+            FilterChain filterChain
+    ) throws IOException, ServletException {
 
         String header = request.getHeader("Authorization");
 
         if (header != null && header.startsWith("Bearer ")) {
-            try {
-                String token = header.substring(7);
-                String username = jwtUtil.extractUsername(token);
+            String token = header.substring(7);
 
-                if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-                    UsernamePasswordAuthenticationToken auth =
-                            new UsernamePasswordAuthenticationToken(
-                                    username, null, Collections.emptyList());
-                    SecurityContextHolder.getContext().setAuthentication(auth);
-                }
+            try {
+                String email = jwtUtil.extractEmail(token);
+                String role = jwtUtil.extractRole(token);
+
+                UsernamePasswordAuthenticationToken auth =
+                        new UsernamePasswordAuthenticationToken(
+                                email,
+                                null,
+                                List.of(() -> role)
+                        );
+
+                SecurityContextHolder.getContext().setAuthentication(auth);
+
             } catch (Exception e) {
-                System.out.println("JWT Token validation failed: " + e.getMessage());
-                // Don't throw exception, just continue - permitAll endpoints should still work
+                response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                response.getWriter().write("{\"error\": \"Invalid or expired token\"}");
+                return;
             }
         }
 
